fix popup body overflow

--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@ body {
 
 #grid-container > div {
     display: grid;
-    overflow: auto;
     justify-items: center;
     background: #fff;
 }
@@ -134,7 +133,6 @@ body {
     height: 500px;
     width: 80vw;
     max-width: 800px;
-    overflow: auto;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
     background-color: rgba(255, 255, 255, .9);
@@ -160,6 +158,8 @@ body {
 
 .popup-body {
     padding: .75em 1em;
+    height: calc(100% - 44px);
+    overflow-y: auto !important;
 }
 
 .popup-body em {
